search for multi-songs by a single theme now works